--- a/react-care-team/package.json
+++ b/react-care-team/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.4",
     "@tanstack/react-query": "^5.12.2",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
@@ -18,6 +19,7 @@
     "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
+    "@types/node": "^20.10.4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
