--- a/react-care-team/package.json
+++ b/react-care-team/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.4",
     "@tanstack/react-query": "^5.12.2",
+    "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
